@@ -160,6 +160,18 @@ name|util
 operator|.
 name|concurrent
 operator|.
+name|CountDownLatch
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
 name|atomic
 operator|.
 name|AtomicBoolean
@@ -271,6 +283,16 @@ operator|.
 name|servlet
 operator|.
 name|ServletResponse
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|servlet
+operator|.
+name|UnavailableException
 import|;
 end_import
 
@@ -796,6 +818,18 @@ specifier|volatile
 name|CoreContainer
 name|cores
 decl_stmt|;
+DECL|field|init
+specifier|protected
+specifier|final
+name|CountDownLatch
+name|init
+init|=
+operator|new
+name|CountDownLatch
+argument_list|(
+literal|1
+argument_list|)
+decl_stmt|;
 DECL|field|abortErrorMessage
 specifier|protected
 name|String
@@ -1314,6 +1348,11 @@ operator|=
 name|coresInit
 expr_stmt|;
 comment|// crucially final assignment
+name|init
+operator|.
+name|countDown
+argument_list|()
+expr_stmt|;
 block|}
 block|}
 DECL|method|setupJvmMetrics
@@ -2133,24 +2172,55 @@ name|isShutDown
 argument_list|()
 condition|)
 block|{
+try|try
+block|{
+name|init
+operator|.
+name|await
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|e
+parameter_list|)
+block|{
+comment|//well, no wait then
+block|}
+specifier|final
+name|String
+name|msg
+init|=
+literal|"Error processing the request. CoreContainer is either not initialized or shutting down."
+decl_stmt|;
+if|if
+condition|(
+name|cores
+operator|==
+literal|null
+operator|||
+name|cores
+operator|.
+name|isShutDown
+argument_list|()
+condition|)
+block|{
 name|log
 operator|.
 name|error
 argument_list|(
-literal|"Error processing the request. CoreContainer is either not initialized or shutting down."
+name|msg
 argument_list|)
 expr_stmt|;
 throw|throw
 operator|new
-name|SolrException
+name|UnavailableException
 argument_list|(
-name|ErrorCode
-operator|.
-name|SERVICE_UNAVAILABLE
-argument_list|,
-literal|"Error processing the request. CoreContainer is either not initialized or shutting down."
+name|msg
 argument_list|)
 throw|;
+block|}
 block|}
 name|AtomicReference
 argument_list|<
